Added editor for date struct/data fields.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5366 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -319,17 +319,17 @@
             class="org.nightlabs.jfire.base.prop.edit.blockbased.SelectionDataFieldEditor$Factory"
             targetType="org.nightlabs.jfire.prop.datafield.SelectionDataField">
       </propDataFieldEditorFactory>
-   </extension>
-   <extension
-         point="org.nightlabs.base.login">
-      <login class="org.nightlabs.jfire.base.login.LoginDelegate"/>
-   </extension>
-   <extension
-         point="org.nightlabs.jfire.base.propDataFieldEditorFactory">
       <propDataFieldEditorFactory
             class="org.nightlabs.jfire.base.prop.edit.blockbased.ImageDataFieldEditor$Factory"
             targetType="org.nightlabs.jfire.prop.datafield.ImageDataField">
       </propDataFieldEditorFactory>
+      <propDataFieldEditorFactory
+            class="org.nightlabs.jfire.base.prop.edit.blockbased.DateDataFieldEditor$Factory"
+            targetType="org.nightlabs.jfire.prop.datafield.DateDataField">
+      </propDataFieldEditorFactory>
    </extension>
-			
+   <extension
+         point="org.nightlabs.base.login">
+      <login class="org.nightlabs.jfire.base.login.LoginDelegate"/>
+   </extension>			
 </plugin>
