added some removeExtension-Extensions
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5372 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -331,5 +331,29 @@
    <extension
          point="org.nightlabs.base.login">
       <login class="org.nightlabs.jfire.base.login.LoginDelegate"/>
-   </extension>			
+   </extension>		
+   
+   <extension
+         point="org.nightlabs.base.removeExtension">
+      <removeExtension
+            attributeName="id"
+            attributePattern="org.eclipse.ui.edit.text.actionSet.navigation"
+            elementPath="actionSet"
+            extensionPointID="org.eclipse.ui.actionSets"/>
+      <removeExtension
+            attributeName="id"
+            attributePattern="org.eclipse.ui.edit.text.actionSet.convertLineDelimitersTo"
+            elementPath="actionSet"
+            extensionPointID="org.eclipse.ui.actionSets"/>
+      <removeExtension
+            attributeName="id"
+            attributePattern="org.eclipse.ui.WorkingSetActionSet"
+            elementPath="actionSet"
+            extensionPointID="org.eclipse.ui.actionSets"/>
+      <removeExtension
+            attributeName="id"
+            attributePattern=".*eclipse.*resource.*"
+            elementPath="perspective"
+            extensionPointID="org.eclipse.ui.perspectives"/>
+   </extension>
 </plugin>
