Added editors for regex and number struct/data fields.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5373 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -327,6 +327,14 @@
             class="org.nightlabs.jfire.base.prop.edit.blockbased.DateDataFieldEditor$Factory"
             targetType="org.nightlabs.jfire.prop.datafield.DateDataField">
       </propDataFieldEditorFactory>
+      <propDataFieldEditorFactory
+            class="org.nightlabs.jfire.base.prop.edit.blockbased.NumberDataFieldEditor$Factory"
+            targetType="org.nightlabs.jfire.prop.datafield.NumberDataField">
+      </propDataFieldEditorFactory>
+      <propDataFieldEditorFactory
+            class="org.nightlabs.jfire.base.prop.edit.blockbased.RegexDataFieldEditor$Factory"
+            targetType="org.nightlabs.jfire.prop.datafield.RegexDataField">
+      </propDataFieldEditorFactory>
    </extension>
    <extension
          point="org.nightlabs.base.login">
