- Changed some minor stuff in the structure editor. - Added phone number field - Struct editor is working, data editor still to be done.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5478 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -299,6 +299,12 @@
             editorFactoryClass="org.nightlabs.jfire.base.prop.structedit.DateStructFieldEditor$DateStructFieldEditorFactory"
             factoryClass="org.nightlabs.jfire.base.prop.structedit.DateStructFieldFactory"
             name="Date field"/>
+       <propStructField
+            class="org.nightlabs.jfire.prop.structfield.PhoneNumberStructField"
+            description="Field for inputting phone numbers."
+            editorFactoryClass="org.nightlabs.jfire.base.prop.structedit.DefaultStructFieldEditor$DefaultStructFieldEditorFactory"
+            factoryClass="org.nightlabs.jfire.base.prop.structedit.PhoneNumberStructFieldFactory"
+            name="Phone number field"/>
    </extension>
  	<extension
        id="org.nightlabs.jfire.person.edit.blockbased.special.PersonalDataBlockEditor"
