Added editors for PhoneNumber field. Removed the use of the existing three text fields for phone numbers from the search facilities.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5483 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -341,6 +341,10 @@
             class="org.nightlabs.jfire.base.prop.edit.blockbased.RegexDataFieldEditor$Factory"
             targetType="org.nightlabs.jfire.prop.datafield.RegexDataField">
       </propDataFieldEditorFactory>
+      <propDataFieldEditorFactory
+            class="org.nightlabs.jfire.base.prop.edit.blockbased.PhoneNumberDataFieldEditor$PhoneNumberDataFieldEditorFactory"
+            targetType="org.nightlabs.jfire.prop.datafield.PhoneNumberDataField">
+      </propDataFieldEditorFactory>
    </extension>
    <extension
          point="org.nightlabs.base.login">
