LoginDialog with workstation
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5678 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.properties
+++ b/plugin.properties
@@ -47,6 +47,7 @@ person.preferences.pages.PersonStructOrder.fieldstable.col0=Structure fields
 login.label.login = Login
 login.label.user = Username: 
 login.label.pass = Password: 
+login.label.workstation = Workstation:
 login.label.details = Details: 
 login.label.organisation = OrganisationID: 
 login.label.serverURL = Server URL: 
@@ -70,7 +71,7 @@ login.error.unhadledExceptionMessage = Caught exception while verifying login.
 login.error.authenticationFailed = Authentication failed.\nCheck username, password and organisationID.
 login.error.communicatinError = Communication error. Check server URL.\nErrormessage: 
 login.error.offlineDecision = User decided to work offline
-
+login.error.missingWorkstationID = You must specify an workstationID
 
 # **************************************
 # Actions
