JFireBase LoginIcons + PerspectiveExtensions for actionsSets
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5825 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.properties
+++ b/plugin.properties
@@ -76,8 +76,8 @@ login.error.missingWorkstationID = You must specify an workstationID
 # **************************************
 # Actions
 # **************************************
-actions.login.icons.login = icons/Login_login.png
-actions.login.icons.logout = icons/Login_logout.png
+actions.login.icons.login = icons/Login.24x24.png
+actions.login.icons.logout = icons/Logout.24x24.png
 actions.login.tooltip.login = JFire Login
 actions.login.tooltip.logout = Logout from JFire
 action.new.unnamed = Unnamed
