.classpath-files  - Added sourcepath for JDO2 and JPOX in all classpath-files
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireServerManager@6492 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry kind="var" path="JBOSS/server/default/lib/bcel.jar"/>
 	<classpathentry sourcepath="/JBOSS_SRC" kind="var" path="JBOSS/server/default/lib/jboss.jar"/>
 	<classpathentry kind="var" path="LOG4J"/>
-	<classpathentry kind="var" path="JDO2"/>
+	<classpathentry sourcepath="JPOX_SRC" kind="var" path="JDO2"/>
 	<classpathentry kind="var" path="XERCES"/>
 	<classpathentry kind="var" path="XALAN"/>
 	<classpathentry sourcepath="/WORKSPACE/NightLabsCascadedAuthenticationJBoss/src" kind="var" path="WORKSPACE/NightLabsCascadedAuthenticationJBoss/dist/NightLabsCascadedAuthenticationJBoss.jar"/>
@@ -17,7 +17,7 @@
 	<classpathentry sourcepath="WORKSPACE/NightLabsJDO/src" kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar"/>
 	<classpathentry kind="var" path="WORKSPACE/JFireRCLBackend/dist/JFireRCLBackend.jar"/>
 	<classpathentry kind="var" path="APACHE_COMMONS/commons-beanutils.jar"/>
-	<classpathentry sourcepath="/JPOX_SRC/Core/src/java" kind="var" path="JPOX"/>
+	<classpathentry sourcepath="JPOX_SRC" kind="var" path="JPOX"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/jbosssx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
