- extracted Cache and JDOObjectDAO from eclipse projects into independent library - removed deprecated ChangeManager
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@6533 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build.properties
+++ b/build.properties
@@ -9,7 +9,8 @@ bin.includes = plugin.xml,\
                LICENSE.txt,\
                META-INF/,\
                lib/,\
-               plugin_de_DE.properties
+               plugin_de_DE.properties,\
+               lib/JFireBaseClientLib.jar
 src.includes = src/,\
                splash.bmp,\
                schema/,\
