--- a/plugin.xml
+++ b/plugin.xml
@@ -235,7 +235,7 @@
 	
   <extension
         point="org.nightlabs.base.cache">
-     <cacheFactory class="org.nightlabs.jfire.base.jdo.cache.CacheFactory"/>
+     <cacheFactory class="org.nightlabs.jdo.cache.CacheFactory"/>
   </extension>
 
 	
