--- a/.classpath
+++ b/.classpath
@@ -10,10 +10,9 @@
 	<classpathentry kind="var" path="LOG4J"/>
 	<classpathentry kind="var" path="WORKSPACE/NightLabsBase/dist/NightLabsBase.jar"/>
 	<classpathentry kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar"/>
-	<classpathentry sourcepath="/WORKSPACE/JFireBasePublicBean/src" kind="var" path="WORKSPACE/JFireBasePublicBean/dist/JFireBasePublicBean.jar"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireBasePublicBean/dist/JFireBasePublicBean.jar" sourcepath="/WORKSPACE/JFireBasePublicBean/src"/>
 	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
-	<classpathentry sourcepath="JPOX_SRC" kind="var" path="JDO2"/>
+	<classpathentry kind="var" path="JDO2" sourcepath="JPOX_SRC"/>
 	<classpathentry kind="var" path="JUNIT_HOME/junit.jar"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireBaseClientLib/dist/JFireBaseClientLib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
