moved all DAOs to new project JFireBaseDAO
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@6619 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build.properties
+++ b/build.properties
@@ -8,9 +8,9 @@ bin.includes = plugin.xml,\
                splash.bmp,\
                LICENSE.txt,\
                META-INF/,\
-               lib/,\
                plugin_de_DE.properties,\
-               lib/JFireBaseClientLib.jar
+               lib/,\
+               plugin_customization.ini
 src.includes = src/,\
                splash.bmp,\
                schema/,\
@@ -26,3 +26,4 @@ src.includes = src/,\
                .project,\
                .classpath,\
                plugin_de_DE.properties
+jars.compile.order = org.nightlabs.jfire.base.jar
