JFireBaseDAO.jar is now loaded via remote-class-loading
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseDAO@6647 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/build-nightlabs.properties
+++ b/build-nightlabs.properties
@@ -4,4 +4,7 @@ j2ee.rar.enable=false
 j2ee.jpoxenhance.enable=false
 j2ee.xdoclet.jdodoclet.enable=false
 j2ee.xdoclet.ejbdoclet.enable=false
-j2ee.deploy.enable=false
+#j2ee.deploy.enable=false
+
+j2ee.deploy.subdir=JFire.last
+j2ee.ear=JFireBase.ear
