- moved application.xml for JFireBase.ear from JFireBaseWeb to JFireBase - Cache supports now serverMode (with one pseudo-sharedInstance per user) [the JDOLifecycleManager must however still be implemented for the server-side] - refactored JFireDemoWebShop to run inside JBoss (beautified it a lot ;-)
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseDAO@6735 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -14,6 +14,6 @@
 	</classpathentry>
 	<classpathentry kind="var" path="WORKSPACE/JFireServerManager/dist/JFireServerManager.jar" sourcepath="/WORKSPACE/JFireServerManager/src"/>
 	<classpathentry kind="var" path="JBOSS/client/jbossall-client.jar"/>
-	<classpathentry kind="var" path="WORKSPACE/JFireBaseClientLib/dist/JFireBaseClientLib.jar"/>
+	<classpathentry kind="var" path="WORKSPACE/JFireBaseClientLib/dist/JFireBaseClientLib.jar" sourcepath="/WORKSPACE/JFireBaseClientLib/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
