--- a/build-nightlabs.properties
+++ b/build-nightlabs.properties
@@ -4,4 +4,6 @@ j2ee.rar.enable=false
 j2ee.jpoxenhance.enable=false
 j2ee.xdoclet.jdodoclet.enable=false
 j2ee.xdoclet.ejbdoclet.enable=false
-j2ee.deploy.enable=false
+j2ee.deploy.enable=true
+
+j2ee.deploy.subdir=JFire.last/
