changed classpath of client projects to include WORKSPACE/JFireBaseClientLib
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@6773 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.xml
+++ b/plugin.xml
@@ -410,4 +410,8 @@
             elementPath="perspective"
             extensionPointID="org.eclipse.ui.perspectives"/>
    </extension>
+   <extension
+         point="org.nightlabs.jfire.base.j2ee.remoteResourceFilter">
+      <exclusion pattern="org.nightlabs.jfire.base.exclusion1"/>
+   </extension>
 </plugin>
