--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar"/>
 	<classpathentry kind="var" path="WORKSPACE/JFireBasePublicBean/dist/JFireBasePublicBean.jar" sourcepath="/WORKSPACE/JFireBasePublicBean/src"/>
 	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
-	<classpathentry kind="var" path="JDO2" sourcepath="JPOX_SRC"/>
+	<classpathentry kind="var" path="JDO2" sourcepath="/JPOX_SRC"/>
 	<classpathentry kind="var" path="JUNIT_HOME/junit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
