--- a/plugin.properties
+++ b/plugin.properties
@@ -11,6 +11,7 @@
 productName=JFire
 appName=JFire App
 perspectives.jfireWelcome.name = JFire Update
+perspectives.overview.name = Overview
 views.category.name=General
 
 swtAppName=JFire Application
