- login async - some l10n
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@6978 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin.properties
+++ b/plugin.properties
@@ -1,38 +1,36 @@
-# ***************************************
-# Copyright (c) 2004
-# NightLabs GmbH
-# ***************************************
+# **************************************
+# Copyright (c) 2007 - www.NightLabs.org
+# **************************************
 
 
 # ****************************************************************************
 #                       Properties for the plugin.xml
 # ****************************************************************************
 
-productName=JFire
-appName=JFire App
-perspectives.jfireWelcome.name = JFire Update
-perspectives.overview.name = Overview
-views.category.name=General
+# not in use?
+#productName=JFire
+# not in use?
+#views.category.name=General
+# not in use?
+#exceptionhandler.throwable.name=Exception Handler for Throwable
 
-swtAppName=JFire Application
+appName=JFire
+swtAppName=JFire
 aboutText=JFire\n
 (c) Copyright NightLabs GmbH 2004. All rights reserved.\n\
 Visit http://jfire.org
 
+perspectives.jfireWelcome.name=Welcome
+perspectives.overview.name=Overview
 
+views.overview.name=Overview
+views.overview.category.name=Overview
 
-login.action.toolTip = JFire Login
-login.menu.label = Login
-login.actionSet.label = Login Action Set
-
-exceptionhandler.throwable.name = Exception Handler for Throwable
-
-
-views.welcome.category.name = JFire
-views.welcome.name = JFire Welcome View
+login.menu.label=Login
+login.action.label=JFire &Login
+login.action.toolTip=JFire Login
 
 person.preferences.pages.PersonManagement.name=Person Management
-
 person.preferences.pages.PersonStructOrder.name=Structure Display Order
 person.preferences.pages.PersonStructOrder.blockstable.col0=Structure blocks
 person.preferences.pages.PersonStructOrder.fieldstable.col0=Structure fields
@@ -41,52 +39,21 @@ person.preferences.pages.PersonStructOrder.fieldstable.col0=Structure fields
 #                       Properties for the Classes
 # ****************************************************************************
 
-# ***************************************
-# Login Dialog Labels
-# ***************************************
-
-login.label.login = Login
-login.label.user = Username: 
-login.label.pass = Password: 
-login.label.workstation = Workstation:
-login.label.details = Details: 
-login.label.organisation = OrganisationID: 
-login.label.serverURL = Server URL: 
-login.label.initialContext = InitialContext Factory: 
-login.label.securityProtocol = Security Protocol: 
-login.label.saveSettings = Save settings to Config
-login.label.button.login = Login
-login.label.button.offline = Work Offline
-login.label.button.quit = Quit
-
-# ***************************************
-# Login Dialog Error Messages
-# ***************************************
-
-login.error.missingUserID = You must specify an userID.
-login.error.missingOrganisationID = You must specify an organisationID.
-login.error.missingContextFactory = You must specify an initial context factory.
-login.error.missingServerURL = You must specify a server URL.
-login.error.missingSecurityProtocol = You must specify a security protocol.
-login.error.unhadledExceptionMessage = Caught exception while verifying login.
-login.error.authenticationFailed = Authentication failed.\nCheck username, password and organisationID.
-login.error.communicatinError = Communication error. Check server URL.\nErrormessage: 
-login.error.offlineDecision = User decided to work offline
-login.error.missingWorkstationID = You must specify an workstationID
 
 # **************************************
 # Actions
 # **************************************
-actions.login.icons.login = icons/Login.24x24.png
-actions.login.icons.logout = icons/Logout.24x24.png
-actions.login.tooltip.login = JFire Login
-actions.login.tooltip.logout = Logout from JFire
-action.new.unnamed = Unnamed
+# not used:
+#actions.login.icons.login=icons/Login.24x24.png
+#actions.login.icons.logout=icons/Logout.24x24.png
+actions.login.tooltip.login=JFire Login
+actions.login.tooltip.logout=Logout from JFire
+action.new.unnamed=Unnamed
 
 # **************************************
 # Menus
 # **************************************
-menu.openrecentfiles.text = Recent Files
+menu.openrecentfiles.text=Recent Files
 
 # **************************************
 # Person Management
